--- a/homepage.html
+++ b/homepage.html
@@ -4,6 +4,7 @@
     
  <head>
    <title>My first html document </title>   
+   <link rel="stylesheet" type="text/css" href="mystyle.css">
  </head>
 
     <body>
